tests/samples/invalid/reserved_keyword_as_declaration_identifier.pn

fn i128()
{
	var ok = true;
}

struct void
{
	x: i32,
}

struct Foo
{
	bool: i32,
}

